profilelist1exp/unpackaged/objects/Non_SFDC_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non SFDC Contacts</relationshipLabel>
        <relationshipName>Non_SFDC_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_1__c</fullName>
        <label>Contact Phone 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_2__c</fullName>
        <label>Contact Phone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Rank__c</fullName>
        <label>Contact Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <label>Contact Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lattice_Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipLabel>Non SFDC Contacts</relationshipLabel>
        <relationshipName>Non_SFDC_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Non SFDC Contacts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Non SFDC Contacts Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non SFDC Contacts</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Validate_Phone1_format</fullName>
        <active>false</active>
        <description>Phone field shall accept only numeric (0-9), plus (+), dash (-) and open/close bracket “(”, “)” characters</description>
        <errorConditionFormula>NOT(REGEX(Contact_Phone_1__c,&quot;[0-9 ()+-]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Contact_Phone_1__c</errorDisplayField>
        <errorMessage>Phone Number is numeric only and can only include the following characters “()” “+” “-“</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Phone2_format</fullName>
        <active>false</active>
        <description>Phone field shall accept only numeric (0-9), plus (+), dash (-) and open/close bracket “(”, “)” characters</description>
        <errorConditionFormula>NOT(REGEX( Contact_Phone_2__c ,&quot;[0-9 ()+-]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Contact_Phone_2__c</errorDisplayField>
        <errorMessage>Phone Number is numeric only and can only include the following characters “()” “+” “-“</errorMessage>
    </validationRules>
</CustomObject>